--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,17 @@ numpy = "^2.1.3"
 opencv-python = "^4.10.0.84"
 
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.1.1"
+
+[tool.flake8]
+max-line-length = 88  # Allow slightly longer lines for better readability
+exclude = .venv,build,dist  # Exclude virtual environments and build folders
+ignore = E203, E501, W503  # Ignore some common issues for readability and compatibility
+show-source = true  # Display the problematic line with the error
+statistics = true  # Show summary statistics of errors
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
