--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ opencv-python = "^4.10.0.84"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
+pre-commit = "^3.5.3"
 
 [tool.flake8]
 max-line-length = 88  # Allow slightly longer lines for better readability
