--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ opencv-python = "^4.10.0.84"
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
 pre-commit = "^3.5.3"
+sphinx = "^8.1.3"
 
 [tool.flake8]
 max-line-length = 120  # Allow slightly longer lines for better readability
