--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9, 3.10, 3.11]  # Modifier selon vos besoins
+        python-version: [3.9]  
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
