--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["heflavie <niniehebral@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 numpy = "^2.1.3"
-opencv-python = "^4.10.0.84"
+#opencv-python = "^4.10.0.84"
+opencv-python-headless = "^4.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
