--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,12 @@ python = "^3.11"
 numpy = "^2.1.3"
 #opencv-python = "^4.10.0.84"
 opencv-python-headless = "^4.5.0"
+bandit = "^1.7.4"       # Vérifie les problèmes de sécurité
 
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
+flake8-bugbear = "^23.9.20" # Détecte les code smells
 pre-commit = "^3.5.3"
 sphinx = "^8.1.3"
 
