--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+git-changelog = "^2.0"  # Ajoute cette ligne pour git-changelog
 numpy = "^2.1.3"
 #opencv-python = "^4.10.0.84"
 opencv-python-headless = "^4.5.0"
@@ -17,7 +18,7 @@ bandit = "^1.7.4"       # Vérifie les problèmes de sécurité
 flake8 = "^7.1.1"
 flake8-bugbear = "^23.9.20" # Détecte les code smells
 pre-commit = "^3.5.3"
-sphinx = "^8.1.3"
+sphinx = "^6.0"
 
 [tool.flake8]
 max-line-length = 120  # Allow slightly longer lines for better readability
