--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -71,6 +71,10 @@ jobs:
       with:
         python-version: 3.11
 
+    - name: Install git-changelog
+      run: |
+        pip install git-changelog
+
     - name: Generate Changelog
       id: changelog
       run: |
