suppression des options ster et end dans le git-changelog car non suportées

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -97,8 +97,9 @@ jobs:
         fi
 
         # Génération du changelog avec git-changelog
-        git-changelog --start=$last_tag --end=HEAD > CHANGELOG.md
+        git-changelog -F "$last_tag..HEAD" > CHANGELOG.md
         cat CHANGELOG.md
+
 
     - name: Upload release artifacts
       run: |
