--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -62,6 +62,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     if: startsWith(github.ref, 'refs/tags/')  # Only run on tags
+    permissions:
+      contents: write  # Donne l'autorisation de modifier les contenus, nécessaire pour créer des releases
+      id-token: write  # Donne l'autorisation d'utiliser le token d'identification
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
