--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -94,7 +94,6 @@ jobs:
         echo "Checking GitHub API access..."
         curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/user
 
-
     - name: Generate Changelog
       id: changelog
       run: |
@@ -115,7 +114,6 @@ jobs:
         git-changelog -F "$last_tag..HEAD" > CHANGELOG.md
         cat CHANGELOG.md
 
-
     - name: Upload release artifacts
       run: |
         mkdir artifacts
@@ -126,5 +124,35 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         files: artifacts/*
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  deploy_docs:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/main'  # Only run on the main branch
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
+
+    - name: Install dependencies
+      run: |
+        poetry install --no-root -v
+        poetry run pip install sphinx ghp-import
+    
+    - name: Build Sphinx documentation
+      run: |
+        poetry run sphinx-build -b html docs/ docs/_build/html
+    
+    - name: Deploy documentation to GitHub Pages
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        ghp-import -n -p -f docs/_build/html
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
