--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -140,6 +140,10 @@ jobs:
       with:
         python-version: 3.11
 
+    - name: Install Poetry
+      run: |
+        curl -sSL https://install.python-poetry.org | python3 -
+
     - name: Install dependencies
       run: |
         poetry install --no-root -v
