--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -151,7 +151,7 @@ jobs:
     
     - name: Build Sphinx documentation
       run: |
-        poetry run sphinx-build -b html docs/ docs/_build/html
+        poetry run sphinx-build -b html docs/source/ docs/_build/html
     
     - name: Deploy documentation to GitHub Pages
       run: |
