--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -157,6 +157,6 @@ jobs:
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
-        ghp-import -n -p -f docs/_build/html
+        poetry run ghp-import -n -p -f docs/_build/html
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
