--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -131,6 +131,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     if: github.ref == 'refs/heads/main'  # Only run on the main branch
+    permissions:
+      contents: write
+      pages: write
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
